<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">InstaDAM</string>
    <string name="API_URL">http://217.160.51.173:5123</string>
    <string name="API_BEARER">eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJzdWIiOiI2M2I2ZDIyNGQ0Yzk3NGM3YWI2ZTgxZjIiLCJpYXQiOjE2NzMwOTE2MzQsImV4cCI6MTY3Mzk1NTYzNCwidHlwZSI6ImFjY2VzcyJ9.D2GaxkXsNgJ5z5MkZZrojXwSsfpTUQPGC3qJ-h8sEUk</string>
    <string name="SP_USER">USER</string>
    <string name="mail">Mail</string>
    <string name="emailAddress">Adresse mail</string>
    <string name="pseudo">Pseudo</string>
    <string name="password">Mot de passe</string>
    <string name="signup">S\'inscrire</string>
    <string name="signin">Se connecter</string>
    <string name="signin_title">Connexion</string>
    <string name="signup_underline"><u>S\'inscrire</u></string>
    <string name="signin_underline"><u>Se connecter</u></string>
    <string name="save">Enregistrer</string>
    <string name="logo">InstaDAM Logo</string>
    <string name="randomImage">Image aléatoire</string>
    <string name="textViewForDev">TextView</string>
    <string name="editProfile">Modifier profil</string>
    <string name="email_empty_error">L\'adresse mail ne peut être vide.</string>
    <string name="password_empty_error">Le mot de passe ne peut être vide.</string>
    <string name="email_pattern_error">L\'adresse mail est incorrecte.</string>
    <string name="pseudo_empty_error">Le pseudo ne peut être vide.</string>
    <string name="password_length_8_error">Le mot de passe doit contenir 8 charactères minimum.</string>
    <string name="password_length_20_error">Le mot de passe doit contenir 20 charactères maximum.</string>
    <string name="password_pattern_error">Le mot de passe doit contenir 1 minuscule, 1 majuscule et 1 chiffre.</string>
    <string name="same_password_error">Les 2 mots de passe doivent correspondres.</string>
    <string name="email_already_token_error">L\'adresse mail est déjà prise.</string>
    <string name="activate_location_in_settings">Afin d\'utiliser l\'application, veuillez activer la localisation dans les paramètres de votre appareil.</string>
    <string name="activate">Activer</string>
    <string name="no">Annuler</string>
    <string name="home_icon_label">Accueil</string>
    <string name="add_icon_label">Publier</string>
    <string name="profile_icon_label">Profil</string>
    <string name="viewMap">Voir la map</string>
    <string name="take_picture_btn_label">Prendre une photo</string>
    <string name="picture_name_label">Nom de la photo :</string>
    <string name="capture_picture_content_desc">Image capturé</string>
    <string name="picture_description_label">Description :</string>
    <string name="publish_picture_btn_label">Publier l\'image</string>
    <string name="load_picture_btn_label">Charger depuis la galerie</string>
    <string name="error_creating_file">Error lors de la création de l\'image</string>
    <string name="authority_provider">com.example.instadam.provider</string>
    <string name="action_cancel">Action annulée</string>
    <string name="action_failed">Action échouée</string>
    <string name="warning_fill_all_fields">Veuillez compléter les champs</string>
    <string name="error_publishing_post">Erreur lors de la publication</string>
</resources>