<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".settings.SettingsActivity">

    <include layout="@layout/header" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginVertical="60dp"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/titlePseudo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="35dp"
                android:fontFamily="@font/poppins_bold"
                android:textColor="@color/app_black"
                android:textSize="@dimen/subtitle"
                android:text="@string/pseudo" />

            <EditText
                android:id="@+id/pseudo"
                android:layout_width="265dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:paddingHorizontal="10dp"
                android:background="@drawable/custom_field"
                android:backgroundTint="@color/app_white"
                android:ems="10"
                android:fontFamily="@font/poppins"
                android:textSize="@dimen/text"
                android:textColor="@color/app_black"
                android:inputType="text"
                android:importantForAutofill="no"
                android:hint="@string/pseudo" />

            <TextView
                android:id="@+id/titleEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="35dp"
                android:fontFamily="@font/poppins_bold"
                android:textColor="@color/app_black"
                android:textSize="@dimen/subtitle"
                android:text="@string/emailAddress" />

            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/poppins"
                android:textColor="@color/app_black"
                android:textSize="@dimen/text"
                android:text="@string/textViewForDev" />

            <Button
                android:id="@+id/save"
                android:layout_width="182dp"
                android:layout_height="74dp"
                android:layout_gravity="center"
                android:layout_marginTop="35dp"
                android:background="@drawable/custom_button"
                app:backgroundTint="@null"
                android:textAllCaps="false"
                android:fontFamily="@font/poppins_bold"
                android:textSize="@dimen/text"
                android:textColor="@color/app_black"
                android:text="@string/save" />

        </LinearLayout>

    </ScrollView>

</FrameLayout>