<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/background"
    tools:context=".publish.PublishActivity">

    <include layout="@layout/header"
        android:id="@+id/header"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:fillViewport="true"
        android:layout_marginVertical="60dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ProgressBar
                android:id="@+id/progressPublish"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/header" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="10dp"
                android:paddingEnd="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/button_image"
                        android:layout_width="161dp"
                        android:layout_height="74dp"
                        android:layout_gravity="center"
                        android:layout_marginEnd="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/custom_button"
                        android:fontFamily="@font/poppins_bold"
                        android:text="@string/take_picture_btn_label"
                        android:textAllCaps="false"
                        android:textColor="@color/app_black"
                        android:textSize="16sp"
                        app:backgroundTint="@null" />

                    <Button
                        android:id="@+id/button_load"
                        android:layout_width="172dp"
                        android:layout_height="74dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/custom_button"
                        android:fontFamily="@font/poppins_bold"
                        android:text="@string/load_picture_btn_label"
                        android:textAllCaps="false"
                        android:textColor="@color/app_black"
                        android:textSize="16sp"
                        app:backgroundTint="@null" />
                </LinearLayout>

                <TextView
                    android:id="@+id/textViewName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/picture_name_label"
                    android:textColor="@color/app_black"
                    android:textSize="@dimen/text" />

                <EditText
                    android:id="@+id/editTextName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/poppins"
                    android:textColor="@color/app_black"
                    android:inputType="text"
                    tools:ignore="LabelFor"
                    android:autofillHints="Nom de votre post" />

                <ImageView
                    android:id="@+id/captured_image"
                    android:layout_width="fill_parent"
                    android:layout_height="180dp"
                    android:layout_margin="20dp"
                    android:contentDescription="@string/capture_picture_content_desc"
                    app:srcCompat="@drawable/no_picture" />

                <TextView
                    android:id="@+id/textViewDesc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/picture_description_label"
                    android:textColor="@color/app_black"
                    android:textSize="@dimen/text" />

                <EditText
                    android:id="@+id/editTextDesc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:inputType="text"
                    tools:ignore="LabelFor"
                    android:textColor="@color/app_black"
                    android:fontFamily="@font/poppins"
                    android:autofillHints="Description de votre post" />

                <Button
                    android:id="@+id/button_save"
                    android:layout_width="220dp"
                    android:layout_height="74dp"
                    android:layout_gravity="center"
                    android:layout_margin="20dp"
                    android:background="@drawable/custom_button"
                    android:text="@string/publish_picture_btn_label"
                    android:fontFamily="@font/poppins_bold"
                    android:textColor="@color/app_black"
                    android:textSize="@dimen/text"
                    android:textAllCaps="false"
                    app:backgroundTint="@null" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/navigation_bar"
        android:name="com.example.instadam.components.NavigationBar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="bottom"
        tools:layout="@layout/fragment_navigation_bar" />

</FrameLayout>